@@ -3,6 +3,12 @@ from pysnmp.proto import errind, error
 
 class NoPriv(base.AbstractEncryptionService):
     serviceID = (1, 3, 6, 1, 6, 3, 10, 1, 2, 1) # usmNoPrivProtocol
+    def hashPassphrase(self, authProtocol, privKey):
+        return
+    
+    def localizeKey(self, authProtocol, privKey, snmpEngineID):
+        return
+    
     def encryptData(self, encryptKey, privParameters, dataToEncrypt):
         raise error.StatusInformation(errorIndication=errind.noEncryption)
     
